--- a/Daniela/basic1.html
+++ b/Daniela/basic1.html
@@ -10,7 +10,13 @@
 
 <body>
 
-    <script src="basic1.js"></script>
+    <script>
+        document.write("Hello from the Browser")
+
+
+        const greeting = ["Hello", "from", "the", "Console."]
+        console.log(greeting.join(" "))
+    </script>
 </body>
 
 </html>
